--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "untitled1",
   "version": "1.0.0",
-  "main": "src/main.ts",
+  "main": "src/bot.ts",
   "scripts": {
-    "run": "ts-node src/main.ts"
+    "run": "ts-node src/bot.ts"
   },
   "keywords": [],
   "author": "",
