--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/bot.ts",
   "scripts": {
-    "run": "ts-node src/bot.ts"
+    "run": "ts-node src/bot.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
